[metadata]
name = IPweather
version = 0.1.1
author  = cookie0_o
author_email = therealcookie@waifu.club
url = https://github.com/cookie0o
description = get the users current weather from his ip
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
Python_requires = >=3.7
include_package_data = True