[metadata]
name = IPweather
version = 0.1.6
author  = cookie0_o
author_email = therealcookie@waifu.club
url = https://github.com/cookie0o/IPweather
description = A package to get the current weather using a IP address or other data and to get the Ip address of the user. 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
Python_requires = >=3.7
include_package_data = True